Added links to the footer element

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,11 @@ a {
 .form-errors {
 	color: red;
 }
+
+footer {
+  background-color: #eee;
+  padding: 1em;
+  border: 2px solid #dde;
+  margin: 2em 0;
+  border-radius: .5em;
+}
