--- a/views/layout.html
+++ b/views/layout.html
@@ -19,7 +19,10 @@
     {% endblock %}
 
     {% block footer %}
-      <footer>This be the footer.</footer>
+      <footer>
+        <a href="/">Home</a> &gt; <a href="/about">About us</a>
+        
+      </footer>
     {% endblock %}
 
   </body>
