--- a/views/create-event.html
+++ b/views/create-event.html
@@ -16,7 +16,29 @@
 	<form id="create-event" method="POST">
     <label for="title">Event title:</label>
     <input type="text" name="title">
+    <br>
+    <label for="title">Location:</label>
+    <input type="text" name="location">
+    <br>
+    <label for="title">Image:</label>
+    <input type="text" name="image">
+    <br>
+    <label for="title">Year:</label>
+    <input type="text" name="year">
+    <br>
+    <label for="title">Month:</label>
+    <input type="text" name="month">
+    <br>
+    <label for="title">Day:</label>
+    <input type="text" name="title">
+    <br>
+    <label for="title">Hour:</label>
+    <input type="text" name="hour">
+    <br>
+    <label for="title">Event title:</label>
+    <input type="text" name="minute">
   </form>
+  
 {% endblock %}
 
 
