--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,16 @@
   <p>
     Welcome to {{ title }}. {{tagline}}
   </p>
+  
+  <p> 
+    Here is our list of Events:
+  </p>
+  
+  <div>
+    {% include "fragments/events-list.html" %}
+  </div>
+  
+  
   <p>
     Check out the <a href="/about">About us</a> page
     as well as the <a href="/events">Events</a> page.
